--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="principios.js"></script>
+    <style>
+        #lacaja {
+            background-color: pink;
+            width: fit-content;
+        }
+        .otracaja {
+            background-color: lightblue;
+            width: 100px;
+            height: 100px;
+            margin: 10px;
+        }
+        </style>
 </head>
 <body>
-    
+    <div id="lacaja"></div>
+    <div class="otracaja"></div>
+    <div class="otracaja"></div>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="principios.js"></script>
 </body>
 </html>
